[gd_scene load_steps=15 format=3 uid="uid://csa620pihkaf"]

[ext_resource type="Script" path="res://scenes/Objects/Players/Weapons/Special Weps/rolling_bomb.gd" id="1_kvwvl"]
[ext_resource type="Texture2D" uid="uid://b0wmbfr68jjcj" path="res://sprites/Players/Copy Robot/Weapons/BusterSmall.png" id="2_e3u38"]
[ext_resource type="Texture2D" uid="uid://dgiwcwe0dt077" path="res://sprites/explosion.png" id="2_r28ig"]
[ext_resource type="AudioStream" uid="uid://62xrmywm48ps" path="res://sounds/bustershot.wav" id="3_7ylgb"]
[ext_resource type="AudioStream" uid="uid://cs2dmn3ahpbea" path="res://sounds/pop.wav" id="4_qabuy"]
[ext_resource type="AudioStream" uid="uid://mfk4w30lewvq" path="res://sounds/tink.wav" id="5_tb2vm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n3exc"]
atlas = ExtResource("2_r28ig")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e08mh"]
atlas = ExtResource("2_e3u38")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp8dl"]
atlas = ExtResource("2_e3u38")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj74"]
atlas = ExtResource("2_e3u38")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmmfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3exc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e08mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp8dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj74")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjbb8"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31c0o"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc76y"]
size = Vector2(6, 12)

[node name="RollingBomb" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_kvwvl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tmmfq")
autoplay = "default"
frame_progress = 0.431236

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bjbb8")

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7ylgb")
bus = &"SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qabuy")
bus = &"SFX"

[node name="ReflectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tb2vm")
bus = &"SFX"

[node name="TopBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_31c0o")

[node name="BotBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_31c0o")

[node name="LftBox" type="CollisionShape2D" parent="."]
position = Vector2(-9, 0)
shape = SubResource("RectangleShape2D_fc76y")

[node name="RgtBox" type="CollisionShape2D" parent="."]
position = Vector2(9, 0)
shape = SubResource("RectangleShape2D_fc76y")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
